--- a/evaluationengine.html
+++ b/evaluationengine.html
@@ -1,4 +1,4 @@
-ï»¿--- 
+--- 
 layout: documentation 
 title: EvaluationEngine 
 teaser: Decouple business logic from control flow
@@ -62,7 +62,7 @@ if (evaluationEngine.Answer(new MyQuestion()))
         <li>Questioner is completely decoupled from answer finding algorithm.</li>
         <li>Hierarchical evaluation engines (children inherit knowledge from parent)</li>
         <li>Solution definitions can be loaded from modules or plug-ins.</li>
-        <li>Extensible to solve any kind of question (validation rules, status queries, …)</li>
+        <li>Extensible to solve any kind of question (validation rules, status queries, ...)</li>
         <li>Fluent definition syntax allowing constraints, strategies, aggregators and multiple expressions per question.</li>
         <li>Thorough customizable logging.</li 
     </ul>
@@ -154,6 +154,3 @@ You can define the global behaviour in a parent evaluation engine and change beh
 a child engine. The child engine inherits all knowledge of the parent, but can change the aggregator and add expressions.
 </p>
 <img src="img/evaluationenginehierarchies.png" width="400" />
-
-
-
