--- a/documentation.html
+++ b/documentation.html
@@ -1,6 +1,27 @@
 --- 
-layout: default
+layout: documentation
 title: Documentation 
+navigation:
+   - name: Bootstrapper
+     link: bootstrapper.html
+   - name: Event Broker
+     link: eventbroker.html
+   - name: Distributed Event Broker
+     link: distributedeventbroker.html
+   - name: Mapping Event Broker
+     link: mappingeventbroker.html
+   - name: Evaluation Engine
+     link: evaluationengine.html
+   - name: Async (deprecated)
+     link: async.html
+   - name: StateMachine
+     link: statemachine.html
+   - name: Road Map
+     link: roadmap.html
+   - name: How to migrate
+     link: howtomigrate.html
+   - name: Coding Guidelines
+     link: codingguidelines.html
 ---
 	<header class="page-header">
 
