--- a/documentation.html
+++ b/documentation.html
@@ -16,6 +16,8 @@ navigation:
      link: async.html
    - name: StateMachine
      link: statemachine.html
+   - name: Version
+     link: version.html   
    - name: Road Map
      link: roadmap.html
    - name: How to migrate
