--- a/version.html
+++ b/version.html
@@ -6,6 +6,7 @@ navigation:
    - name: Overview
      link: version.html
 ---
+<h1>Version Task and Executable</h1>
 <h2>Motivation</h2>
 <p>
 Manual versioning of assemblies is tedious and error-prone. Especially in a continuous deployment environment, versions have to be calculated automatically and environment agnostic.
