--- a/msbuildtasks.html
+++ b/msbuildtasks.html
@@ -7,10 +7,20 @@ navigation:
      link: msbuildtasks.html
    - name: Check Hint Path Task
      link: checkhintpathtask.html
+   - name: Check No Binding Redirects Task
+     link: checknobindingredirectstask.html
+   - name: Check Nuget Dependencies Task
+     link: checknugetdependenciestask.html
 ---
 <h1>MSBuild Tasks</h1>
 <p>
 The MSBuild tasks of Appccelerate are little helpers to make development easier.
+</p>
+<p>
+They are executed as part of a build. Therefore, no additional scripting is needed.
+</p>
+<p>
+All tasks can be installed into your projects with Nuget.
 </p>
 <p>
 Check out the MSBuild tasks (navigation on the right).
