added MSBuild docu link to documentation overview page

--- a/documentation.html
+++ b/documentation.html
@@ -16,6 +16,8 @@ navigation:
      link: async.html
    - name: StateMachine
      link: statemachine.html
+   - name: MSBuild Tasks
+     link: msbuildtasks.html
    - name: Version
      link: version.html   
    - name: Road Map
