--- a/version.html
+++ b/version.html
@@ -226,7 +226,7 @@ Example:
 </ul>
 </p>
 <p>
-If this sounds to complicated, consider one of the alternatives below.
+If this sounds too complicated, consider one of the alternatives below.
 </p>
 
 <h2>Alternatives</h2>
