added io file paths

--- a/documentation.html
+++ b/documentation.html
@@ -12,8 +12,8 @@ navigation:
      link: mappingeventbroker.html
    - name: Evaluation Engine
      link: evaluationengine.html
-   - name: Async (deprecated)
-     link: async.html
+   - name: IO
+     link: io.html
    - name: StateMachine
      link: statemachine.html
    - name: MSBuild Tasks
@@ -26,6 +26,8 @@ navigation:
      link: howtomigrate.html
    - name: Coding Guidelines
      link: codingguidelines.html
+   - name: Async (deprecated)
+     link: async.html
 ---
 	<header class="page-header">
 
