added temporary file holder

--- a/io.html
+++ b/io.html
@@ -7,6 +7,8 @@ navigation:
      link: io.html
    - name: File Paths
      link: iofilepaths.html
+   - name: Temporary File Holder
+     link: iotemporaryfileholder.html
 ---
 <h1>IO</h1>
 <p>
@@ -14,4 +16,12 @@ Appccelerate.IO provides helpers for easier interaction with file system, resour
 </p>
 
 <h2><a href="iofilepaths.html">File Paths</a></h2>
+<p>
 Classes that represent absolute, relative or shortcut paths for files and folders so that you don't have to fiddle with simple strings anymore.
+</p>
+
+<h2><a href="iotemporaryfileholder.html">Temporary File Holder</a></h2>
+<p>
+Creates a file with specified content and deletes it on disposal.
+</p>
+
