--- a/iofilepaths.html
+++ b/iofilepaths.html
@@ -7,6 +7,8 @@ navigation:
      link: io.html
    - name: File Paths
      link: iofilepaths.html
+   - name: Temporary File Holder
+     link: iotemporaryfileholder.html
 ---
 <h1>File Paths</h1>
 <h2>Motivation</h2>
