added IO Access

--- a/io.html
+++ b/io.html
@@ -5,6 +5,8 @@ teaser: IO accelerated (development speed at least :-) )
 navigation:
    - name: Overview
      link: io.html
+   - name: Access
+     link: ioaccess.html
    - name: File Paths
      link: iofilepaths.html
    - name: Temporary File Holder
@@ -13,6 +15,11 @@ navigation:
 <h1>IO</h1>
 <p>
 Appccelerate.IO provides helpers for easier interaction with file system, resources etc.
+</p>
+
+<h2><a href="ioaccess.html">Access</a></h2>
+<p>
+Makes the file system extensible and testable.
 </p>
 
 <h2><a href="iofilepaths.html">File Paths</a></h2>
@@ -24,4 +31,3 @@ Classes that represent absolute, relative or shortcut paths for files and folder
 <p>
 Creates a file with specified content and deletes it on disposal.
 </p>
-
