--- a/iofilepaths.html
+++ b/iofilepaths.html
@@ -5,6 +5,8 @@ teaser: Classes that represent absolute, relative or shortcut paths for files an
 navigation:
    - name: IO Overview
      link: io.html
+   - name: Access
+     link: ioaccess.html
    - name: File Paths
      link: iofilepaths.html
    - name: Temporary File Holder
