--- a/iotemporaryfileholder.html
+++ b/iotemporaryfileholder.html
@@ -5,6 +5,8 @@ teaser: Creates a file with specified content and deletes it on disposal.
 navigation:
    - name: IO Overview
      link: io.html
+   - name: Access
+     link: ioaccess.html
    - name: File Paths
      link: iofilepaths.html
    - name: Temporary File Holder
