--- a/iofilepaths.html
+++ b/iofilepaths.html
@@ -20,7 +20,7 @@ So do we in our code.
 </p>
 <p>
 The problem is that we never know for sure whether it is an absolute or relative path. Or if it is even a path with a shortcut like <code>%AppData%</code>.
-We assign strings to strings and by making a wring assumption, we introduced a defect.
+We assign strings to strings and by making a wrong assumption, we introduced a defect.
 </p>
 <p>
 The file path classes of Appccelerate help you to make your code cleaner by using strongly typed variables.
@@ -52,7 +52,7 @@ An absolute path can be converted to a <code>AbsoluteFilePath</code> or <code>Ab
 Represents an absolute file path.
 </p>
 <p>
-It is only valid when the path is an absolute patch and contains a filename.
+It is only valid when the path is an absolute path and contains a filename.
 </p>
 
 <h2>Absolute Folder Path</h2>
