--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Home
 ---
-	<h2 class="slogan align-center">Appccelerates your .Net Application development<br />
+	<h2 class="slogan align-center">Accelerates your .Net Application development<br />
 	Based upon real world experience.</h2>
 	<section id="features-slider" class="ss-slider">
 	
@@ -95,15 +95,16 @@ title: Home
 	</div><!-- end .one-half -->
 	
 	<div class="one-half last">
-		<h4>Alpha packages NuGet feed</h4>
+		<h4>Alpha packages MyGet feed</h4>
 		<div class="infobox">
 
-			<h4>bbv Software Services hosts appccelerators on their TeamCity server. This is alpha geek stuff.</h4>
-
+			<h4>Every commit results in a package pushed to our MyGet feed - even your own pull requests on GitHub!</h4>
 			<p>
-			<a class="button" href="https://teamcity.bbv.ch/viewType.html?buildTypeId=bt4&tab=buildTypeStatusDiv">TeamCity project overview.</a> Log-in as guest.			
-			</p>
-			NuGet package feed URL: https://teamcity.bbv.ch/guestAuth/app/nuget/v1/FeedService.svc
+			NuGet package feed URL: https://www.myget.org/F/appccelerate/
+            </p>
+            <p>
+            You can use nuget.exe, Visual Studio or <a href="http://npe.codeplex.com/">NuGet Package Explorer</a> to list all packages available.
+            </p>			
 						
 		</div><!-- end .infobox -->
 		
