--- a/eventbrokermatchers.html
+++ b/eventbrokermatchers.html
@@ -15,6 +15,8 @@ navigation:
      link: eventbrokerregistrationbyregistrar.html
    - name: Direct Interaction
      link: eventbrokerdirectinteraction.html
+   - name: Simplified Handler Methods
+     link: eventbrokersimplifiedhandlermethods.html
    - name: Handlers
      link: eventbrokerhandlers.html
    - name: Matchers
