--- a/eventbrokerexceptionhandling.html
+++ b/eventbrokerexceptionhandling.html
@@ -13,6 +13,8 @@ navigation:
      link: eventbrokerregistrationoverinterface.html
    - name: Registration by Registrar
      link: eventbrokerregistrationbyregistrar.html
+   - name: Simplified Handler Methods
+     link: eventbrokersimplifiedhandlermethods.html
    - name: Direct Interaction
      link: eventbrokerdirectinteraction.html
    - name: Handlers
