--- a/ioaccess.html
+++ b/ioaccess.html
@@ -29,8 +29,7 @@ And then write the file.
 <p>
 The <code>File</code> class and all other abstraction classes provide exactly the same methods as the original ones from the .Net framework.
 </p>
-<pre>
-<code>
+<script type="syntaxhighlighter" class="brush: csharp"><![CDATA[
 using Appccelerate.IO
 
 public class Program
@@ -55,11 +54,12 @@ public class Worker
 
     public void WriteFile()
     {
-        this.accessFactory.CreateFile().WriteAllText("c:\\folder\\filename.extension", "this is the content");
+        this.accessFactory.CreateFile().WriteAllText(
+            "c:\\folder\\filename.extension", 
+            "this is the content");
     }
 }
-</code>
-</pre>
+]]></script>
 
 <h2>Testability</h2>
 <p>
@@ -70,8 +70,7 @@ Using the indirection via the access factory allows you to test this code withou
 <p>
 One way to test code interacting with the file system is to fake the classes that make calls to the file system:
 </p>
-<pre>
-<code>
+<script type="syntaxhighlighter" class="brush: csharp"><![CDATA[
 public class SampleTest
 {
     private readonly Worker testee;
@@ -94,12 +93,13 @@ public class SampleTest
 
         this.testee.WriteFile();
 
-        A.CallTo(() => file.WriteAllText("c:\\folder\\filename.extension", "this is the content"))
+        A.CallTo(() => file.WriteAllText(
+            "c:\\folder\\filename.extension", 
+            "this is the content"))
             .MustHaveHappened();
     }
 }
-</code>
-</pre>
+]]></script>
 <p>
 This unit test is written using xUnit (test framework) and FakeItEasy (fake/mock library).
 </p>
@@ -114,8 +114,7 @@ Faking is best suited for unit tests for classes with little interaction or lot 
 <p>
 Another way to test code interacting with the file system is to use the in-memory file system:
 </p>
-<pre>
-<code>
+<script type="syntaxhighlighter" class="brush: csharp"><![CDATA[
 public class SampleTest
 {
     private readonly Worker testee;
@@ -137,8 +136,7 @@ public void WritesAFile()
     accessFactory.FileSystem.FileExists("c:\\folder\\filename.extension")
         .Should().BeTrue();
 }
-</code>
-</pre>
+]]></script>
 <p>
 This test checks whether a file was written, by inspecting the in-memory file system.
 </p>
@@ -193,8 +191,7 @@ accessFactory.RegisterFileExtensionsProvider(() => new[] { new LogFileExtension(
 <p>
 Write the extension:
 </p>
-<pre>
-<code>
+<script type="syntaxhighlighter" class="brush: csharp"><![CDATA[
 public class LogFileExtension : FileExtensionBase
 {
     public override void BeginWriteAllText(string path, string contents)
@@ -212,8 +209,7 @@ public class LogFileExtension : FileExtensionBase
         // log that operation failed
     }
 }
-</code>
-</pre>
+]]></script>
 <p>
 There exist base classes for all extension types so that you only have to implement the methods you are interested in.
 </p>
