added draft of how to contribute

--- a/documentation.html
+++ b/documentation.html
@@ -26,6 +26,8 @@ navigation:
      link: howtomigrate.html
    - name: Coding Guidelines
      link: codingguidelines.html
+   - name: How to contribute
+     link: howtocontribute.html
    - name: Async (deprecated)
      link: async.html
 ---
