added how to contribute concepts

--- a/howtocontribute.html
+++ b/howtocontribute.html
@@ -13,43 +13,20 @@ navigation:
      link: howtocontributefaq.html
 ---
 
-HowTo und Erklärung trennen? interleaved?
+<p>
+To get started immediately, please read the <a href="howtocontributewalkthrough.html">walkthrough</a>.
+</p>
+<p>
+If you are interested why things are as they are, take a look at the <a href="howtocontributeconcepts.html">concepts</a>.
+</p>
+<p>
+And hopefully the <a href="howtocontributefaq.html">FAQ</a> can answer your questions.
+
 
 Only master!
 
-<h2>Working with multiple Repositories</h2>
-<p>
-If you want to work on multiple repositories, we suggest you setup all repositories in one folder. Then, you can use the PowerShell commandlets (see below).
-</p>
-<p>
-When you clone all Appccelerate repositories, it should look like this:
-</p>
-<script type="syntaxhighlighter" class="brush: ps"><![CDATA[
-    Directory: C:\Projects\appccelerate\repos
 
 
-Mode                LastWriteTime     Length Name
-----                -------------     ------ ----
-d----        22.07.2014     15:02            bootstrapper
-d----        24.10.2014     15:32            CheckHintPathTask
-d----        24.10.2014     15:32            CheckNoBindingRedirectsTask
-d----        24.10.2014     15:32            CheckNugetDependenciesTask
-d----        17.07.2014     17:32            development
-d----        24.10.2014     15:32            distributedeventbroker
-d----        24.10.2014     15:32            distributedeventbroker.masstransit
-d----        24.10.2014     15:32            distributedeventbroker.nservicebus
-d----        22.07.2014     08:21            evaluationengine
-d----        14.01.2014     16:14            eventbroker
-d----        31.03.2014     09:49            fundamentals
-d----        24.10.2014     15:31            io
-d----        24.10.2014     15:32            mappingeventbroker
-d----        24.10.2014     15:32            mappingeventbroker.automapper
-d----        14.01.2014     08:18            NugetPackagesTest
-d----        06.10.2014     09:48            scopingeventbroker
-d----        29.09.2014     11:16            scripts
-d----        14.01.2014     16:17            statemachine
-d----        24.10.2014     15:32            Version
-]]></script>
 
 
 <h3>StyleCop</h3>
