--- a/howtocontributewalkthrough.html
+++ b/howtocontributewalkthrough.html
@@ -20,7 +20,7 @@ navigation:
     <li>Clone forks locally</li>
     <li>First build</li>
     <li>Change code</li>
-    <li>Run StyleCop, Checks, tests and specifications</li>
+    <li>Run tests</li>
     <li>Open Pull Request</li>
     <li>Test your own Nuget package</li>
     <li>Wait for review feedback</li>
@@ -70,6 +70,10 @@ Push your changes to your fork on GitHub and open a pull request on the correspo
 </p>
 <p>
 Please add some description about what your goal is with the changes.
+</p>
+<p>
+GitHub shows whether the build was successful or not on the pull request page after running the build.
+<img src="img/PullRequestFeedback.png">
 </p>
 
 <h2>Test your own Nuget Package</h2>
