--- a/version.html
+++ b/version.html
@@ -113,7 +113,7 @@ The informational version is empty if the tag has no annotated message.
 </table>
 </p>
 
-<h2>GitVersion Task</h2>
+<h2 id="gitversiontask">GitVersion Task</h2>
 <p>
 The Appccelerate.GitVersionTask is a MSBuild task than can be used to version assemblies during building.
 </p>
