added how to contribute commandlets

--- a/howtocontribute.html
+++ b/howtocontribute.html
@@ -9,9 +9,12 @@ navigation:
      link: howtocontributewalkthrough.html
    - name: Concepts
      link: howtocontributeconcepts.html
+   - name: PowerShell Commandlets
+     link: howtocontributecommandlets.html
    - name: FAQ
      link: howtocontributefaq.html
 ---
+<h1>How to contribute</h1>
 
 <p>
 To get started immediately, please read the <a href="howtocontributewalkthrough.html">walkthrough</a>.
@@ -20,76 +23,12 @@ To get started immediately, please read the <a href="howtocontributewalkthrough.
 If you are interested why things are as they are, take a look at the <a href="howtocontributeconcepts.html">concepts</a>.
 </p>
 <p>
+To make multi-repository development easy, look at our <a href="howtocontributecommandlets.html">PowerShell commandlets</a>.
+</p>
+<p>
 And hopefully the <a href="howtocontributefaq.html">FAQ</a> can answer your questions.
-
-
-Only master!
-
-
-
-
-
-<h3>StyleCop</h3>
-<p>
-StyleCop checks compliance with the coding style guidelines of Appccelerate.
-Every violation results in an compilation error.
-</p>
-<p>
-If you want real-time feedback about violations, you can use Resharper with the StyleCop plug-in.
-</p>
-<h3>Sanity Checks</h3>
-<p>
-There are MSBuild tasks that check for the following:
-<ul>
-    <li>Hint Paths: all hint paths in the project file point to a correct location. (see <a href="checkhintpathtask.html">Check Hint Path Task</a> for more details)</li>
-    <li>Nuget Dependency Versions: checks that the versions of project references and Nuget dependencies match. (see <a href="checknugetdependenciestask.html">Check Nuget Dependencies Task</a> for more details)</li>
-</ul>
-</p>
-<h3>Unit Tests and Specifications</h3>
-<p>
-All unit tests and specifications are executed and a failing unit test or specification breaks the build.
 </p>
 
-
-<h2>Repositories</h2>
 <p>
-</p>
-
-<h2>Nuget Packages</h2>
-<p>
-</p>
-<h3>Nuget.org</h3>
-<p>
-</p>
-<h3>MyGet.org</h3>
-<p>
-</p>
-<h3>Development Packages</h3>
-<p>
-</p>
-<h3>Appccelerate Dependencies</h3>
-<p>
-</p>
-<h3>3rd party Dependencies</h3>
-<p>
-</p>
-
-<h2>Build Locally</h2>
-<p>
-</p>
-<h3>Debug Build</h3>
-<p>
-</p>
-<h3>Release Build</h3>
-<p>
-</p>
-<h3>Visual Studio</h3>
-<p>
-</p>
-<h3>PowerShell Commandlets</h3>
-<p>
-</p>
-
-<h2>Pull Requests and Integration Server</h2>
-<p>
+<b>Looking forward to your pull requests!</b>
 </p>
