--- a/howtocontributewalkthrough.html
+++ b/howtocontributewalkthrough.html
@@ -9,6 +9,8 @@ navigation:
      link: howtocontributewalkthrough.html
    - name: Concepts
      link: howtocontributeconcepts.html
+   - name: PowerShell Commandlets
+     link: howtocontributecommandlets.html
    - name: FAQ
      link: howtocontributefaq.html
 ---
@@ -56,7 +58,9 @@ Go ahead and improve the code.
 
 <h2>Run Tests</h2>
 <p>
-There are a lot of tests built into the build process. Please verify that you can build with release configuration before opening a pull request.
+There are a lot of tests built into the build process. 
+Please verify that you can build with release configuration before opening a pull request. 
+Alternatively, you can run the <a href="howtocontributecommandlets.html#createlocalnugetpackages"><code>CreateLocalNugetPackages</code> commandlet</a>.
 </p>
 <p>
 If the build succeeds, you are ready to open a pull request. 
