added how to contribute FAQ, minor fixes

--- a/howtocontributeconcepts.html
+++ b/howtocontributeconcepts.html
@@ -81,7 +81,7 @@ But if you only want to contribute something small, be free to implement it on t
 </p>
 <p>
 Your pull requests should be opened against the master branch of the Appccelerate main repository.
-See <a href="howtocontributeconcepts#pullrequests">pull requests</a> for more information on how we integrate your pull request.
+See <a href="howtocontributeconcepts.html#pullrequests">pull requests</a> for more information on how we integrate your pull request.
 See <a href="howtocontributeconcepts.html#versioning">versioning</a> for more information on how versioning with only a master branch works in Appccelerate.
 </p>
 
@@ -189,7 +189,7 @@ Whenever a pull request is opened or new commits are added, the Appccelerate bui
     <li>merge the pull request into the master branch of the main repository</li>
     <li>build the software</li>
     <li>run all tests and specifications</li>
-    <li>push pre-release package to the Appccelerate MyGet feed</li>
+    <li>push pre-release package to the Appccelerate MyGet feed (<code>https://www.myget.org/F/appccelerate/</code>)</li>
 </ul>
 </p>
 <p>
