--- a/howtocontributecommandlets.html
+++ b/howtocontributecommandlets.html
@@ -87,9 +87,9 @@ Prints all dependencies and found conflicts.
 </ul>
 <h4>Samples</h4>
 <ul style="list-style: none;">
-    <li><code>Pull all</code></li>
-    <li><code>Pull fundamentals,bootstrapper</code></li>
-    <li><code>Pull -Repositories fundamentals</code></li>
+    <li><code>CheckNugetDependenciesForConflictingVersions all</code></li>
+    <li><code>CheckNugetDependenciesForConflictingVersions fundamentals,bootstrapper</code></li>
+    <li><code>CheckNugetDependenciesForConflictingVersions all -skipDevelopmentDependencies</code></li>
 </ul>
 <h4>Remarks</h4>
 <p>
