--- a/howtocontributeconcepts.html
+++ b/howtocontributeconcepts.html
@@ -109,7 +109,7 @@ The pre release part looks like <code>-commit&lt;hash&gt;</code>, with <code>&lt
 We built Appccelerate to support us in our commercial projects. 
 Therefore, we value quality, easy maintainability and flexibility a lot.
 But we don't like to put energy into thinking about basic stuff like readability, keeping consistency and so on.
-That's why we put everything possible to check these things into tools.
+That's why we use tools to check everything possible.
 </p>
 <h3 id="stylecop">StyleCop</h3>
 <p>
